# docs

./: .gitignore  404.html  CNAME  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: web.yml
archive/: index.html
archive/ai/: index.html  index.md
archive/ai/AI 提示詞範本/: index.html
archive/ai/模型訓練/: index.html
archive/ai/模型運行框架 - Ollama/: index.html
archive/ai/模型運行框架 - llama.cpp/: index.html
archive/ai/知識庫/: index.html
archive/ai/網頁應用 - MaxKB/: index.html
archive/ai/網頁應用 - n8n/: index.html
archive/ai/語料資料集/: index.html
archive/devops/: index.html  index.md
archive/devops/Distroless_Runtime_Images/: index.html
archive/devops/GitHub Actions/: index.html
archive/devops/lab - 系統與軟體/: index.html
archive/devops/資料庫/: index.html
archive/documents/: index.html  index.md
archive/documents/參考資料/: index.html
archive/documents/計畫書/: index.html
archive/documents/隱寫術/: index.html
archive/linux/: index.html  index.md
archive/linux/Alpine 系統安裝/: index.html
archive/linux/Debian CPU 微碼問題/: index.html
archive/linux/Proxmox VE/: index.html
archive/linux/Ubuntu 常用軟體/: index.html
archive/linux/Ubuntu 桌面 - 推薦軟體/: index.html
archive/linux/opencode/: index.html
archive/linux/ufw 規則參考/: index.html
archive/linux/主機名稱設定/: index.html
archive/linux/硬碟拓展/: index.html
archive/niu/: index.html  index.md
archive/tools/: index.html  index.md
css/: extra.css
docs/: index.md  index.zh.md
docs/archive/: index.md
search/: search_index.json
zh/: index.html
zh-TW/: index.html
zh-TW/archive/: index.html
(+90 files in other folders)
