[project]
name = "docs"
version = "0.0.0.dev0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "XuanYou Lin", email = "a0985821880@gmail.com"}
]

dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-static-i18n>=1.3.0",
    "mkdocstrings[python]>=1.0.0",
    "pymdown-extensions>=10.20",
]

[dependency-groups]
safe = [
    "bandit",
    "safety",
]
